--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="A simple way of live-sharing YouTube videos and playlists with your friends, for tabletop roleplaying games"
     />
+    <meta property="og:image" content="%PUBLIC_URL%/ogimage.jpg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
