--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,8 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;1,400;1,500&display=swap"
-      rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Recursive:wght@500&display=swap" rel="stylesheet">
     <title>Tablebop • Share music with your players</title>
   </head>
   <body>
